--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "eslint": "^9.10.0",
+    "path-to-regexp": "8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
